[metadata]
name = erqa
version = 1.1.2
author = Eugene Lyapustin
author_email = evgeny.lyapustin@graphics.cs.msu.ru
description = A full-reference quality metric for analyzing restoration methods.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/msu-video-group/erqa
project_urls =
    Bug Tracker = https://github.com/msu-video-group/erqa/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = erqa
python_requires = >=3.6
install_requires =
    numpy>=1.14.3
    opencv-python>=3.4.15
